# simple_web_server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile0  Dockerfile1  README.md  form_handler.py  form_hendler.py  main.py  message.html  pyproject.toml
storage/: data.json
