[tool.poetry]
name = "simple-web-server"
version = "0.1.0"
description = ""
authors = ["Denys Tantsiura <ghost0002501@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_web_server"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
